[gd_scene load_steps=6 format=3 uid="uid://dno2tvbw43lh5"]

[ext_resource type="Script" path="res://scripts/baby.gd" id="1_n20r0"]
[ext_resource type="Shader" path="res://shaders/baby.gdshader" id="2_66sbq"]
[ext_resource type="Texture2D" uid="uid://uexs11byfb2" path="res://assets/icon.svg" id="2_ofyu1"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jwexc"]
shader = ExtResource("2_66sbq")

[sub_resource type="CircleShape2D" id="CircleShape2D_xv0ic"]
radius = 40.05

[node name="NPC" type="CharacterBody2D"]
z_index = 4
scale = Vector2(0.4, 0.4)
collision_layer = 2
collision_mask = 3
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_n20r0")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_jwexc")
texture = ExtResource("2_ofyu1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_xv0ic")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_postprocessing = 1
debug_enabled = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="BubbleTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="ThinkingTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="ThinkingBubble" type="ColorRect" parent="."]
offset_left = -22.5
offset_top = -120.0
offset_right = 17.5
offset_bottom = -80.0
scale = Vector2(1.1, 1.2)

[node name="Label" type="Label" parent="ThinkingBubble"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -6.36367
offset_top = -17.5
offset_right = 33.6363
offset_bottom = 17.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "1"

[node name="SwitchTimer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="BubbleTimer" to="." method="_on_bubble_timer_timeout"]
[connection signal="timeout" from="ThinkingTimer" to="." method="_on_thinking_timer_timeout"]
[connection signal="timeout" from="SwitchTimer" to="." method="_on_switch_timer_timeout"]
